add sample midterm q1

--- a/Chapter_1.ipynb
+++ b/Chapter_1.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,109 @@
     "\n",
     "print(f\"Arbitrage Opportunity: {is_arbitrage}\")\n",
     "print(f\"Amount to bet on Team A: {x}\")\n",
-    "print(f\"Maximum Arbitrage Value: {max_arbitrage_value:.2f}\")\n"
+    "print(f\"Maximum Arbitrage Value: {max_arbitrage_value:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sample Midterm Q1\n",
+    "\n",
+    "On this Sunday over 100 million viewers in 200 countries wil watch the New\n",
+    "England Patriots play the Los Angeles Rams in the Super Bowl, the National Football\n",
+    "League championship game. During your discussion section this week you learn that\n",
+    "Guangchu believes the Patriots will win and is giving 9:1 odds. Frank is a fan of the Los\n",
+    "Angeles Rams, and eh is giving 4:1 odds. You seek to bet a total of $300 with Guangchu\n",
+    "and Frank and capture the maximum guaranteed, risk-free arbitrage profit.\n",
+    "\n",
+    "1. How much should you bet with Guangchu and with Frank?\n",
+    "2. What is your profit?\n",
+    "3. Assume Guangchu is making a fair bet. What is the implied probability\n",
+    "that Guangchu assigns to the Patriots winning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "x = amount bet with Guangchu\n",
+    "\n",
+    "\n",
+    "|                  | Patriots Win  | Rams Win     | \n",
+    "|------------------|---------------|--------------|\n",
+    "| Guangchu         | -x            | +9x          |\n",
+    "| Frank            | +4(300-x)      | -(300-x)    |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Arbitrage Opportunity: True\n",
+      "Amount to bet with Guangchu: 100.0\n",
+      "Maximum Arbitrage Value (profit): 700.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate arbitrage\n",
+    "odds_team_patriots = 9/1\n",
+    "odds_team_rams = 4/1\n",
+    "is_arbitrage, max_arbitrage_value, x = calculate_arbitrage(odds_team_patriots, odds_team_rams, 300)\n",
+    "\n",
+    "print(f\"\\nArbitrage Opportunity: {is_arbitrage}\")\n",
+    "print(f\"Amount to bet with Guangchu: {x}\")\n",
+    "print(f\"Maximum Arbitrage Value (profit): {max_arbitrage_value:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "implied prob Guangchu assigns to patriots winning:\n",
+    "  $$ p_A = \\frac{O_A}{1 + O_A} $$\n",
+    "\n",
+    "or E(winnings) = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odds_team_patriots / (1 + odds_team_patriots)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "E(winnings) = -x * P(patriots win) + 9x * (1 - P(patriots win)) = 0\n",
+    "-x * P + 9x - (9x * P) = 0\n",
+    "\n",
+    "- x = 300\n",
+    "- -300P + 2700 - 2700P = 0\n",
+    "- P = 0.9\n",
+    "\n"
    ]
   },
   {
@@ -327,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
