--- a/Chapter_2.ipynb
+++ b/Chapter_2.ipynb
@@ -45,7 +45,7 @@
     "  Where $S$ is the spot price of the underlying asset and $E$ is the strike price.\n",
     "\n",
     "- **Put Option Profit:**\n",
-    "  $$\\text{Profit} = \\max(K - S, 0) - \\text{Premium}$$\n",
+    "  $$\\text{Profit} = \\max(E - S, 0) - \\text{Premium}$$\n",
     "  Where $S$ is the spot price of the underlying asset and $E$ is the strike price."
    ]
   },
@@ -266,9 +266,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The lower bound on the value of the call option is $20.05\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -301,7 +309,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "left: 74\n",
+      "right: 66.07376547004284\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S + P = C + Ee^(-r(T-t))\n",
+    "import math\n",
+    "\n",
+    "LHS = 70 + 4\n",
+    "RHS = 9 + 60 * math.e**(-0.05 * (1))\n",
+    "\n",
+    "print(\"left:\", LHS)\n",
+    "print(\"right:\", RHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.926234529957156"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# buy RHS and sell LHS\n",
+    "profit = LHS - RHS\n",
+    "profit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strategy is to buy the Call option and deposit Ee^(-r(T-t)) in the bank/risk free asset. Then sell the stock and exercise the Put option. Immediately pocket the $7.93 as arbitrage profit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
