--- a/Midterm_1_Review.ipynb
+++ b/Midterm_1_Review.ipynb
@@ -70,7 +70,7 @@
     "  Where $S$ is the spot price of the underlying asset and $E$ is the strike price.\n",
     "\n",
     "- **Put Option Profit:**\n",
-    "  $$\\text{Profit} = \\max(K - S, 0) - \\text{Premium}$$\n",
+    "  $$\\text{Profit} = \\max(E - S, 0) - \\text{Premium}$$\n",
     "  Where $S$ is the spot price of the underlying asset and $E$ is the strike price.\n",
     "\n",
     "### Put-Call Parity Equation\n",
