--- a/Midterm_1_Practice_Test.ipynb
+++ b/Midterm_1_Practice_Test.ipynb
@@ -19,6 +19,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0079"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "e_squared = ((0.5**2) * 0.05) - ((0.3**2) * 0.05)\n",
+    "\n",
+    "var = e_squared - (0.01 ** 2)\n",
+    "var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6925722111871541\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "def calculate_probability(mu, sigma, n, x):\n",
+    "    # Calculate the standard deviation of the sampling distribution\n",
+    "    sigma_sample = sigma* n**0.5\n",
+    "    # Calculate the Z-score \n",
+    "    z_score = (x - n*mu) / sigma_sample\n",
+    "    # Calculate the probability using the cumulative distribution function (CDF)\n",
+    "    probability = norm.cdf(z_score)\n",
+    "    \n",
+    "    return probability\n",
+    "    \n",
+    "# expected = 0.5(0.05) + 0.2(0) + 0.3(-0.05)\n",
+    "\n",
+    "mu=0.01\n",
+    "sigma=(0.0079)**0.5\n",
+    "n = 3 * 60\n",
+    "x = 1.2\n",
+    "P=calculate_probability(mu, sigma, n, x)\n",
+    "\n",
+    "print(1-P)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,6 +121,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arbitrage Opportunity: True\n",
+      "Amount to bet on Team A: 500.0\n",
+      "Maximum Arbitrage Value: 54.55\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def calculate_arbitrage(odds1, odds2, n):\n",
+    "    \"\"\"Determines if there's an arbitrage opportunity and calculates the maximum arbitrage value.\"\"\"\n",
+    "    product = odds1 * odds2\n",
+    "    # if product < 1:\n",
+    "    #     return False, 0, \"Don't invest any money!\"  # No arbitrage opportunity\n",
+    "    x=n*(1+odds2)/(2+odds1+odds2)\n",
+    "    max_arbitrage_value = n*(product-1)/(2+odds1+odds2)\n",
+    "    return True, max_arbitrage_value, round(x,2)\n",
+    "\n",
+    "# Problem 1  fractional odds\n",
+    "odds_team_X = 10/11\n",
+    "odds_team_Y = 10/11\n",
+    "\n",
+    "\n",
+    "# Calculate arbitrage\n",
+    "is_arbitrage, max_arbitrage_value, x = calculate_arbitrage(odds_team_X, odds_team_Y, 1000)\n",
+    "\n",
+    "print(f\"Arbitrage Opportunity: {is_arbitrage}\")\n",
+    "print(f\"Amount to bet on Team A: {x}\")\n",
+    "print(f\"Maximum Arbitrage Value: {100 + max_arbitrage_value:.2f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,6 +168,57 @@
     "\n",
     "Using the put-call parity principle, determine the strike price $E$ of these options. Round your answer to the nearest cent.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ S + P_E(S, t) = C_E(S, t) + Ee^{-r(T-t)} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ee = S + P - C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "147"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rhs = 150 + 7 - 10\n",
+    "rhs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E = 147.b06"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -101,8 +251,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
