--- a/Midterm_1_Review.ipynb
+++ b/Midterm_1_Review.ipynb
@@ -174,6 +174,161 @@
     "\n",
     "where $ g^{-1} $ describes the inverse function of $ g $.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "x = amount bet with Guangchu\n",
+    "\n",
+    "\n",
+    "|                  | chiefs Win  | 49ers Win     | \n",
+    "|------------------|---------------|--------------|\n",
+    "| Guangchu         | -x            | +5x          |\n",
+    "| Frank            | +7/5(240-x)      | -(240-x)    |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arbitrage Opportunity: True\n",
+      "Amount to bet on Team chiefs: 40.0\n",
+      "Maximum Arbitrage Value: 100.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_arbitrage(odds1, odds2, n):\n",
+    "    \"\"\"Determines if there's an arbitrage opportunity and calculates the maximum arbitrage value.\"\"\"\n",
+    "    product = odds1 * odds2\n",
+    "    # if product < 1:\n",
+    "    #     return False, 0, \"Don't invest any money!\"  # No arbitrage opportunity\n",
+    "    x=n*(1+odds2)/(2+odds1+odds2)\n",
+    "    # x = 0\n",
+    "    max_arbitrage_value = n*(product-1)/(2+odds1+odds2)\n",
+    "    return True, max_arbitrage_value, round(x,2)\n",
+    "\n",
+    "# Problem 1  fractional odds\n",
+    "odds_team_chiefs = 5/1\n",
+    "odds_team_49ers = 7/5\n",
+    "\n",
+    "\n",
+    "# Calculate arbitrage\n",
+    "is_arbitrage, max_arbitrage_value, x = calculate_arbitrage(odds_team_chiefs, odds_team_49ers, 140)\n",
+    "\n",
+    "print(f\"Arbitrage Opportunity: {is_arbitrage}\")\n",
+    "print(f\"Amount to bet on Team chiefs: {x}\")\n",
+    "print(f\"Maximum Arbitrage Value: {max_arbitrage_value:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "205"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# S + P = C + Ee^(-r(T-t))\n",
+    "LHS  = 150 + 60\n",
+    "RHS = 5 + 200\n",
+    "print(LHS)\n",
+    "RHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given values\n",
+    "C = 5  # Price of the call option\n",
+    "P = 60  # Price of the put option\n",
+    "E = 200  # Strike price\n",
+    "S =  150 # Current stock price\n",
+    "r = 0  # Interest rate\n",
+    "T = 1  # Time to expiration in years\n",
+    "\n",
+    "# Calculate the present value of the strike price\n",
+    "E_discounted = E * np.exp(-r * T)\n",
+    "\n",
+    "# Calculate the left-hand side (LHS) and right-hand side (RHS) of the equation\n",
+    "LHS = C + E_discounted\n",
+    "RHS = P + S\n",
+    "\n",
+    "# Determine if there is an arbitrage opportunity and suggest strategy\n",
+    "if LHS > RHS:\n",
+    "    # LHS is overpriced, sell the call, buy the put, and invest the strike price at risk-free rate\n",
+    "    arbitrage_amount = LHS - RHS\n",
+    "    strategy = f\"Sell the call option for ${C:.2f}, buy the put option for ${P:.2f}, take out a loan of ${E_discounted:.2f}, buy the stock at ${S:.2f} \"\n",
+    "elif LHS < RHS:\n",
+    "    # RHS is overpriced, buy the call, sell the put, and borrow the strike price at risk-free rate\n",
+    "    arbitrage_amount = RHS - LHS\n",
+    "    strategy = f\"Buy the call option for ${C:.2f}, sell the put option for ${P:.2f}, sell (short) the stock at ${S:.2f}, invest ${E_discounted:.2f} in the risk free asset.\"\n",
+    "else:\n",
+    "    # No arbitrage opportunity exists\n",
+    "    arbitrage_amount = 0\n",
+    "    strategy = \"No arbitrage opportunity is available.\"\n",
+    "\n",
+    "print(f\"Arbitrage opportunity of ${arbitrage_amount:.2f} exists.\")\n",
+    "print(\"Strategy:\", strategy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0. 196.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def calculate_arbitrage_profit(odds, bets):\n",
+    "    \"\"\"Calculates the arbitrage profit given the odds and the bets.\"\"\"\n",
+    "    payouts = np.array(odds) * np.array(bets)\n",
+    "    print(payouts)\n",
+    "    profit = 2*np.min(payouts) - sum(bets)\n",
+    "    return profit\n",
+    "\n",
+    "\n",
+    "profit = calculate_arbitrage_profit([5, 7/5], [0, 140])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -183,8 +338,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
